--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,21 @@ log
 *.log
 tmp
 *.tmp
+*.lock
+group12/247565311/.metadata/.plugins/org.eclipse.core.resources/.history/ff/b099012f05f7001613a8a1ce267847c3
+*.snap
+group12/247565311/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+*.prefs
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.core/1056688891.index
+*.index
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.core/javaLikeNames.txt
+*.dat
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+group12/247565311/.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
+*.ini
+group12/247565311/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+group12/247565311/.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
+*.xmi
+group12/247565311/.metadata/.plugins/org.eclipse.core.resources/.history/38/2083c12d06f7001613a8a1ce267847c3
